--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,6 +1,6 @@
 @media (max-width: 1200px) {
     body {
-     background-color: blueviolet;  
+     background-color: #f44336;  
 }
 
 .fundo-video {
